--- a/project.json
+++ b/project.json
@@ -2,19 +2,35 @@
   // Language version of C3.
   "langrev": "1",
   // Warnings used for all targets.
-  "warnings": ["no-unused"],
+  "warnings": [
+    "no-unused"
+  ],
   // Directories where C3 library files may be found.
-  "dependency-search-paths": ["lib"],
+  "dependency-search-paths": [
+    "lib"
+  ],
   // Libraries to use for all targets.
   "dependencies": [],
   // Authors, optionally with email.
-  "authors": ["Louis Brauer <louis@brauer.family>"],
+  "authors": [
+    "Louis Brauer <louis@brauer.family>"
+  ],
   // Version using semantic versioning.
   "version": "0.1.0",
   // Sources compiled for all targets.
-  "sources": ["src/**", "test/**"],
-  "linked-libraries": ["pq"],
-  "linker-search-paths": ["/opt/homebrew/Cellar/libpq/17.2/lib/"],
+  "sources": [
+    "src/**",
+    "test/**",
+    "../url_c3/src/**"
+  ],
+  "linked-libraries": [
+    "pq",
+    "mysqlclient"
+  ],
+  "linker-search-paths": [
+    "/opt/homebrew/Cellar/libpq/17.2/lib/",
+    "/opt/homebrew/Cellar/mysql-client@8.0/8.0.40/lib/"
+  ],
   // C sources if the project also compiles C sources
   // relative to the project file.
   // "c-sources": [ "csource/**" ],
