--- a/lib/pq.c3l/manifest.json
+++ b/lib/pq.c3l/manifest.json
@@ -1,10 +1,10 @@
 {
-  "provides": "sqlite",
+  "provides": "pq",
   "targets": {
     "macos-aarch64": {
       "dependencies": [],
       "linked-libraries": [
-        "sqlite3"
+        "pq"
       ]
     }
   }
