--- a/lib/sqlite3.c3l/manifest.json
+++ b/lib/sqlite3.c3l/manifest.json
@@ -1,10 +1,10 @@
 {
-  "provides": "pg",
+  "provides": "sqlite3",
   "targets": {
     "macos-aarch64": {
       "dependencies": [],
       "linked-libraries": [
-        "pq"
+        "sqlite3"
       ]
     }
   }
